--- a/InventorySystem/Views/Shared/_Layout.cshtml
+++ b/InventorySystem/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Store" asp-action="Index">Store</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
                             </ul>
                         </li>
                     </ul>
