:zap: CRUD Products

--- a/InventorySystem/Views/Shared/_Layout.cshtml
+++ b/InventorySystem/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Store" asp-action="Index">Store</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Brand" asp-action="Index">Brand</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
                             </ul>
                         </li>
                     </ul>
