--- a/InventorySystem/Areas/Inventory/Views/Home/Index.cshtml
+++ b/InventorySystem/Areas/Inventory/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<InventorySystem.Models.Product>
+﻿@model InventorySystem.Models.Specifications.PagedList<InventorySystem.Models.Product>
 @using InventorySystem.Utils
 
 @{
@@ -16,14 +16,16 @@
 
 <section>
     <div class="container my-2">
-        <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search..." aria-label="Search" aria-describedby="button-addon2" />
-                <button class="btn btn-outline-primary">
-                    <i class="bi bi-search"></i>
-                </button>
+        <form asp-action="Index" method="GET">
+            <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Search..." aria-label="Search" aria-describedby="button-addon2" name="search" value="@ViewData["ActualSearch"]" />
+                    <button type="submit" class="btn btn-outline-primary">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
             </div>
-        </div>
+        </form>
         <div class="row">
             @foreach (var product in Model)
             {
@@ -32,7 +34,7 @@
                         <img src="@SD.ImagePath@product.ImageUrl" class="card-img-top" style="aspect-ratio: 1 / 1" />
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">@product.Description</h5>
-                            <p class="card-text"> $ @String.Format("{0:#,##0.000}", product.Price)</p>
+                            <p class="card-text"> $ @String.Format("{0:#,##0.00}", product.Price)</p>
                         </div>
                         <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto bg-white">
                             <a href="#" class="btn btn-outline-primary">
@@ -43,5 +45,28 @@
                 </div>
             }
         </div>
+
+        <br />
+
+        <div class="text-center">
+            <a asp-action="Index" asp-route-pageNumber="@(1)" class="btn btn-outline-primary" asp-route-actualSearch="@ViewData["ActualSearch"]" >
+                <i class="bi bi-skip-start-fill"></i>
+            </a>
+
+            <a asp-action="Index" asp-route-pageNumber="@((int)ViewData["PageNumber"] - 1)" class="btn btn-outline-primary @ViewData["Previous"]" asp-route-actualSearch="@ViewData["ActualSearch"]" >
+                Previous
+            </a>
+
+            <span>Page @ViewData["PageNumber"] of @ViewData["TotalPages"]</span>
+
+            <a asp-action="Index" asp-route-pageNumber="@((int)ViewData["PageNumber"] + 1)" class="btn btn-outline-primary @ViewData["Next"]" asp-route-actualSearch="@ViewData["ActualSearch"]" >
+                Next
+            </a>
+
+            <a asp-action="Index" asp-route-pageNumber="@ViewData["TotalPages"]" class="btn btn-outline-primary" asp-route-actualSearch="@ViewData["ActualSearch"]" >
+                <i class="bi bi-skip-end-fill"></i>
+            </a>
+        </div>
+
     </div>
 </section>
