--- a/InventorySystem/Views/Shared/_Layout.cshtml
+++ b/InventorySystem/Views/Shared/_Layout.cshtml
@@ -39,9 +39,17 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Store" asp-action="Index">Store</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Brand" asp-action="Index">Brand</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Brand" asp-action="Index">Brands</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                User
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a></li>
                             </ul>
                         </li>
                     </ul>
