--- a/InventorySystem/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/InventorySystem/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,6 +5,8 @@
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <div class="container">
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">You don't have enough authorization to access this resource.</p>
+    </div>
 </header>
