--- a/InventorySystem/Areas/Inventory/Views/Home/Index.cshtml
+++ b/InventorySystem/Areas/Inventory/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                             <p class="card-text"> $ @String.Format("{0:#,##0.00}", product.Price)</p>
                         </div>
                         <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto bg-white">
-                            <a href="#" class="btn btn-outline-primary">
+                            <a asp-action="Detail" asp-route-id="@product.Id" class="btn btn-outline-primary">
                                 <i class="bi bi-tags-fill"></i> Details
                             </a>
                         </div>
