--- a/InventorySystem/Areas/Inventory/Views/ShoppingCart/Index.cshtml
+++ b/InventorySystem/Areas/Inventory/Views/ShoppingCart/Index.cshtml
@@ -63,7 +63,7 @@
                     <div class="card-footer">
                         <div class="card-footer row">
                             <div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6 ">
-                                <a asp-area="Inventory" asp-controller="ShoppingCart" asp-action="Proceder" class="btn btn-primary form-control">Proceed</a>
+                                <a asp-area="Inventory" asp-controller="ShoppingCart" asp-action="Proceed" class="btn btn-primary form-control">Proceed</a>
                             </div>
                         </div>
                     </div>
