--- a/InventorySystem/Views/Shared/_Layout.cshtml
+++ b/InventorySystem/Views/Shared/_Layout.cshtml
@@ -83,6 +83,10 @@
                             </li>
                         }
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order">Orders</a>
+                        </li>
+
                         @if(httpContextAccessor.HttpContext.Session.GetInt32(SD.ssShoppingCarts) != null)
                         {
                             <li>
